--- a/Android App/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Android App/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,9 +9,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_mov"
+        android:src="@drawable/ic_logo_bom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
