--- a/Android App/app/src/main/res/layout/activity_onboarding_three.xml
+++ b/Android App/app/src/main/res/layout/activity_onboarding_three.xml
@@ -5,18 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlue"
-    tools:context=".onboarding.OnboardingOneActivity">
+    tools:context=".onboarding.OnboardingThreeActivity">
 
     <Button
         android:id="@+id/btn_primary"
+        android:textSize="16sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/shape_rectangle_pink"
         android:text="@string/lanjutkan"
         android:textColor="@color/colorWhite"
+        android:fontFamily="@font/montserrat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -25,18 +27,19 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/onboardingthree" />
+        app:srcCompat="@drawable/onboardingthree"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="46dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/cashless"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
@@ -52,9 +55,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:text="@string/cashless_desc"
         android:textColor="@color/colorWhite"
+        android:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
