Customize XML Sign In

--- a/Android App/app/src/main/res/layout/activity_sign_in.xml
+++ b/Android App/app/src/main/res/layout/activity_sign_in.xml
@@ -13,10 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/shape_rectangle_blue_grey"
-        android:text="@string/lewati_perkenalan"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/akun_baru"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -28,8 +30,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/montserrat"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:background="@drawable/shape_rectangle_pink"
-        android:text="@string/lanjutkan"
+        android:text="@string/masuk_akun"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/btn_secondary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +44,7 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="37dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +55,10 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="57dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/sign_in"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
@@ -65,9 +71,10 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/username"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,10 +85,11 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:inputType="textPersonName"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhiteGrey"
@@ -93,9 +101,10 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/password"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,8 +115,8 @@
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
         android:ems="10"
         android:inputType="text|textPassword"
