Add smart itinerary maker menu

--- a/Android App/app/src/main/res/layout/activity_detail.xml
+++ b/Android App/app/src/main/res/layout/activity_detail.xml
@@ -7,16 +7,47 @@
     android:background="@color/colorBlue"
     tools:context=".sign.SignUpActivity">
 
+    <EditText
+        android:id="@+id/editTextTextPersonName5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:backgroundTint="@color/colorWhite"
+        android:drawableLeft="@drawable/ic_format_paint"
+        android:drawablePadding="6sp"
+        android:ems="10"
+        android:fontFamily="@font/montserrat"
+        android:inputType="textPersonName"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/theme"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+
     <Button
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/shape_rectangle_pink"
         android:fontFamily="@font/montserrat"
-        android:text="@string/lanjutkan"
+        android:text="@string/booking"
         android:textColor="@color/colorWhite"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +64,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
-        android:text="@string/sign_up"
+        android:text="@string/smart_itinerary"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -48,9 +79,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/username"
-        android:textColor="@color/colorWhite"
         android:fontFamily="@font/montserrat"
+        android:text="@string/from"
+        android:textColor="@color/colorWhite"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,11 +94,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
+        android:drawableLeft="@drawable/ic_plane"
+        android:drawablePadding="8.72sp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:inputType="textPersonName"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhiteGrey"
-        android:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -79,10 +112,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/password"
         android:fontFamily="@font/montserrat"
-        android:textSize="16sp"
+        android:text="@string/to"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
@@ -94,8 +127,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
+        android:drawableLeft="@drawable/ic_flight_land"
+        android:drawablePadding="6sp"
         android:ems="10"
-        android:inputType="text|textPassword"
+        android:inputType="text"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -118,13 +153,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/nama"
         android:fontFamily="@font/montserrat"
-        android:textSize="16sp"
+        android:text="@string/nama"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
-        tools:text="@string/nama" />
+        tools:text="@string/room" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
@@ -133,10 +168,12 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
+        android:drawableLeft="@drawable/ic_calendar_today"
+        android:drawablePadding="6sp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:inputType="textPersonName"
         android:textColor="@color/colorWhite"
-        android:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -147,10 +184,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/email"
         android:fontFamily="@font/montserrat"
-        android:textSize="16sp"
+        android:text="@string/money"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
@@ -161,9 +198,11 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorWhite"
+        android:drawableLeft="@drawable/ic_attach_money"
+        android:drawablePadding="5sp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:fontFamily="@font/montserrat"
+        android:inputType="textPersonName"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
