--- a/Android App/app/src/main/res/drawable/ic_format_paint.xml
+++ b/Android App/app/src/main/res/drawable/ic_format_paint.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M20,3H19V1H17V3H7V1H5V3H4C2.9,3 2,3.9 2,5V21C2,22.1 2.9,23 4,23H20C21.1,23 22,22.1 22,21V5C22,3.9 21.1,3 20,3ZM20,21H4V8H20V21Z"
+      android:pathData="M18,4V3C18,2.45 17.55,2 17,2H5C4.45,2 4,2.45 4,3V7C4,7.55 4.45,8 5,8H17C17.55,8 18,7.55 18,7V6H19V10H9V21C9,21.55 9.45,22 10,22H12C12.55,22 13,21.55 13,21V12H21V4H18Z"
       android:fillColor="#ffffff"/>
 </vector>
