--- a/Android App/app/src/main/res/layout/activity_itinerary.xml
+++ b/Android App/app/src/main/res/layout/activity_itinerary.xml
@@ -154,12 +154,11 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat"
-        android:text="@string/nama"
+        android:text="@string/room"
         android:textColor="@color/colorWhite"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
-        tools:text="@string/room" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
